exper/编译原理源码/实验一版本迭代/补充char+for+自增自减+多维数组定义/parser.output
Terminals unused in grammar

   SWITCH
   CASE
   COLON
   DEFAULT
   INCREASE
   DECREASE
   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID

   11 FuncDec: ID LP VarList RP
   12        | ID LP RP

   13 VarList: ParamDec
   14        | ParamDec COMMA VarList

   15 ParamDec: Specifier VarDec

   16 CompSt: LC DefList StmList RC

   17 StmList: /* empty */
   18        | Stmt StmList

   19 Stmt: Exp SEMI
   20     | CompSt
   21     | RETURN Exp SEMI
   22     | IF LP Exp RP Stmt
   23     | IF LP Exp RP Stmt ELSE Stmt
   24     | WHILE LP Exp RP Stmt
   25     | FOR LP Exp SEMI Exp SEMI Exp RP Stmt

   26 DefList: /* empty */
   27        | Def DefList
   28        | error SEMI

   29 Def: Specifier DecList SEMI

   30 DecList: Dec
   31        | Dec COMMA DecList

   32 Dec: VarDec
   33    | VarDec ASSIGNOP Exp

   34 Exp: Exp ASSIGNOP Exp
   35    | Exp AND Exp
   36    | Exp OR Exp
   37    | Exp RELOP Exp
   38    | Exp PLUS Exp
   39    | Exp MINUS Exp
   40    | Exp STAR Exp
   41    | Exp DIV Exp
   42    | LP Exp RP
   43    | MINUS Exp
   44    | NOT Exp
   45    | DPLUS Exp
   46    | Exp DPLUS
   47    | DMINUS Exp
   48    | Exp DMINUS
   49    | ID LP Args RP
   50    | ID LP RP
   51    | ID
   52    | INT
   53    | FLOAT
   54    | CHAR

   55 Args: Exp COMMA Args
   56     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 28
INT (258) 52
ID (259) 10 11 12 49 50 51
RELOP (260) 37
TYPE (261) 7
FLOAT (262) 53
CHAR (263) 54
DPLUS (264) 45 46
DMINUS (265) 47 48
LP (266) 11 12 22 23 24 25 42 49 50
RP (267) 11 12 22 23 24 25 42 49 50
LC (268) 16
RC (269) 16
SEMI (270) 4 6 19 21 25 28 29
COMMA (271) 9 14 31 55
PLUS (272) 38
MINUS (273) 39 43
STAR (274) 40
DIV (275) 41
ASSIGNOP (276) 33 34
AND (277) 35
OR (278) 36
NOT (279) 44
IF (280) 22 23
ELSE (281) 23
WHILE (282) 24
RETURN (283) 21
FOR (284) 25
SWITCH (285)
CASE (286)
COLON (287)
DEFAULT (288)
INCREASE (289)
DECREASE (290)
EXT_DEF_LIST (291)
EXT_VAR_DEF (292)
FUNC_DEF (293)
FUNC_DEC (294)
EXT_DEC_LIST (295)
PARAM_LIST (296)
PARAM_DEC (297)
VAR_DEF (298)
DEC_LIST (299)
DEF_LIST (300)
COMP_STM (301)
STM_LIST (302)
EXP_STMT (303)
IF_THEN (304)
IF_THEN_ELSE (305)
FUNC_CALL (306)
ARGS (307)
FUNCTION (308)
PARAM (309)
ARG (310)
CALL (311)
LABEL (312)
GOTO (313)
JLT (314)
JLE (315)
JGT (316)
JGE (317)
EQ (318)
NEQ (319)
UMINUS (320)
LOWER_THEN_ELSE (321)


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
program (68)
    on left: 1, on right: 0
ExtDefList (69)
    on left: 2 3, on right: 1 3
ExtDef (70)
    on left: 4 5 6, on right: 3
Specifier (71)
    on left: 7, on right: 4 5 15 29
ExtDecList (72)
    on left: 8 9, on right: 4 9
VarDec (73)
    on left: 10, on right: 8 9 15 32 33
FuncDec (74)
    on left: 11 12, on right: 5
VarList (75)
    on left: 13 14, on right: 11 14
ParamDec (76)
    on left: 15, on right: 13 14
CompSt (77)
    on left: 16, on right: 5 20
StmList (78)
    on left: 17 18, on right: 16 18
Stmt (79)
    on left: 19 20 21 22 23 24 25, on right: 18 22 23 24 25
DefList (80)
    on left: 26 27 28, on right: 16 27
Def (81)
    on left: 29, on right: 27
DecList (82)
    on left: 30 31, on right: 29 31
Dec (83)
    on left: 32 33, on right: 30 31
Exp (84)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54, on right: 19 21 22 23 24 25 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 55 56
Args (85)
    on left: 55 56, on right: 49 55


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   10 VarDec: ID .
   11 FuncDec: ID . LP VarList RP
   12        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 16

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 17

    CompSt  go to state 18


state 14

   11 FuncDec: ID LP . VarList RP
   12        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 19

    Specifier  go to state 20
    VarList    go to state 21
    ParamDec   go to state 22


state 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 16

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 23

    ExtDecList  go to state 24
    VarDec      go to state 12


state 17

   16 CompSt: LC . DefList StmList RC

    error  shift, and go to state 25
    TYPE   shift, and go to state 2

    INT     reduce using rule 26 (DefList)
    ID      reduce using rule 26 (DefList)
    FLOAT   reduce using rule 26 (DefList)
    CHAR    reduce using rule 26 (DefList)
    DPLUS   reduce using rule 26 (DefList)
    DMINUS  reduce using rule 26 (DefList)
    LP      reduce using rule 26 (DefList)
    LC      reduce using rule 26 (DefList)
    RC      reduce using rule 26 (DefList)
    MINUS   reduce using rule 26 (DefList)
    NOT     reduce using rule 26 (DefList)
    IF      reduce using rule 26 (DefList)
    WHILE   reduce using rule 26 (DefList)
    RETURN  reduce using rule 26 (DefList)
    FOR     reduce using rule 26 (DefList)

    Specifier  go to state 26
    DefList    go to state 27
    Def        go to state 28


state 18

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 19

   12 FuncDec: ID LP RP .

    $default  reduce using rule 12 (FuncDec)


state 20

   15 ParamDec: Specifier . VarDec

    ID  shift, and go to state 23

    VarDec  go to state 29


state 21

   11 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 30


state 22

   13 VarList: ParamDec .
   14        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 31

    $default  reduce using rule 13 (VarList)


state 23

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


state 24

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 25

   28 DefList: error . SEMI

    SEMI  shift, and go to state 32


state 26

   29 Def: Specifier . DecList SEMI

    ID  shift, and go to state 23

    VarDec   go to state 33
    DecList  go to state 34
    Dec      go to state 35


state 27

   16 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    LC      shift, and go to state 17
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    IF      shift, and go to state 45
    WHILE   shift, and go to state 46
    RETURN  shift, and go to state 47
    FOR     shift, and go to state 48

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 49
    StmList  go to state 50
    Stmt     go to state 51
    Exp      go to state 52


state 28

   27 DefList: Def . DefList

    error  shift, and go to state 25
    TYPE   shift, and go to state 2

    INT     reduce using rule 26 (DefList)
    ID      reduce using rule 26 (DefList)
    FLOAT   reduce using rule 26 (DefList)
    CHAR    reduce using rule 26 (DefList)
    DPLUS   reduce using rule 26 (DefList)
    DMINUS  reduce using rule 26 (DefList)
    LP      reduce using rule 26 (DefList)
    LC      reduce using rule 26 (DefList)
    RC      reduce using rule 26 (DefList)
    MINUS   reduce using rule 26 (DefList)
    NOT     reduce using rule 26 (DefList)
    IF      reduce using rule 26 (DefList)
    WHILE   reduce using rule 26 (DefList)
    RETURN  reduce using rule 26 (DefList)
    FOR     reduce using rule 26 (DefList)

    Specifier  go to state 26
    DefList    go to state 53
    Def        go to state 28


state 29

   15 ParamDec: Specifier VarDec .

    $default  reduce using rule 15 (ParamDec)


state 30

   11 FuncDec: ID LP VarList RP .

    $default  reduce using rule 11 (FuncDec)


state 31

   14 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 20
    VarList    go to state 54
    ParamDec   go to state 22


state 32

   28 DefList: error SEMI .

    $default  reduce using rule 28 (DefList)


state 33

   32 Dec: VarDec .
   33    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 55

    $default  reduce using rule 32 (Dec)


state 34

   29 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 56


state 35

   30 DecList: Dec .
   31        | Dec . COMMA DecList

    COMMA  shift, and go to state 57

    $default  reduce using rule 30 (DecList)


state 36

   52 Exp: INT .

    $default  reduce using rule 52 (Exp)


state 37

   49 Exp: ID . LP Args RP
   50    | ID . LP RP
   51    | ID .

    LP  shift, and go to state 58

    $default  reduce using rule 51 (Exp)


state 38

   53 Exp: FLOAT .

    $default  reduce using rule 53 (Exp)


state 39

   54 Exp: CHAR .

    $default  reduce using rule 54 (Exp)


state 40

   45 Exp: DPLUS . Exp

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp  go to state 59


state 41

   47 Exp: DMINUS . Exp

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp  go to state 60


state 42

   42 Exp: LP . Exp RP

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp  go to state 61


state 43

   43 Exp: MINUS . Exp

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp  go to state 62


state 44

   44 Exp: NOT . Exp

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp  go to state 63


state 45

   22 Stmt: IF . LP Exp RP Stmt
   23     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 64


state 46

   24 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 65


state 47

   21 Stmt: RETURN . Exp SEMI

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp  go to state 66


state 48

   25 Stmt: FOR . LP Exp SEMI Exp SEMI Exp RP Stmt

    LP  shift, and go to state 67


state 49

   20 Stmt: CompSt .

    $default  reduce using rule 20 (Stmt)


state 50

   16 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 68


state 51

   18 StmList: Stmt . StmList

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    LC      shift, and go to state 17
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    IF      shift, and go to state 45
    WHILE   shift, and go to state 46
    RETURN  shift, and go to state 47
    FOR     shift, and go to state 48

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 49
    StmList  go to state 69
    Stmt     go to state 51
    Exp      go to state 52


state 52

   19 Stmt: Exp . SEMI
   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   46    | Exp . DPLUS
   48    | Exp . DMINUS

    RELOP     shift, and go to state 70
    DPLUS     shift, and go to state 71
    DMINUS    shift, and go to state 72
    SEMI      shift, and go to state 73
    PLUS      shift, and go to state 74
    MINUS     shift, and go to state 75
    STAR      shift, and go to state 76
    DIV       shift, and go to state 77
    ASSIGNOP  shift, and go to state 78
    AND       shift, and go to state 79
    OR        shift, and go to state 80


state 53

   27 DefList: Def DefList .

    $default  reduce using rule 27 (DefList)


state 54

   14 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 14 (VarList)


state 55

   33 Dec: VarDec ASSIGNOP . Exp

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp  go to state 81


state 56

   29 Def: Specifier DecList SEMI .

    $default  reduce using rule 29 (Def)


state 57

   31 DecList: Dec COMMA . DecList

    ID  shift, and go to state 23

    VarDec   go to state 33
    DecList  go to state 82
    Dec      go to state 35


state 58

   49 Exp: ID LP . Args RP
   50    | ID LP . RP

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    RP      shift, and go to state 83
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp   go to state 84
    Args  go to state 85


state 59

   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   45    | DPLUS Exp .
   46    | Exp . DPLUS
   48    | Exp . DMINUS

    DPLUS   shift, and go to state 71
    DMINUS  shift, and go to state 72

    $default  reduce using rule 45 (Exp)


state 60

   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   46    | Exp . DPLUS
   47    | DMINUS Exp .
   48    | Exp . DMINUS

    DPLUS   shift, and go to state 71
    DMINUS  shift, and go to state 72

    $default  reduce using rule 47 (Exp)


state 61

   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   42    | LP Exp . RP
   46    | Exp . DPLUS
   48    | Exp . DMINUS

    RELOP     shift, and go to state 70
    DPLUS     shift, and go to state 71
    DMINUS    shift, and go to state 72
    RP        shift, and go to state 86
    PLUS      shift, and go to state 74
    MINUS     shift, and go to state 75
    STAR      shift, and go to state 76
    DIV       shift, and go to state 77
    ASSIGNOP  shift, and go to state 78
    AND       shift, and go to state 79
    OR        shift, and go to state 80


state 62

   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   43    | MINUS Exp .
   46    | Exp . DPLUS
   48    | Exp . DMINUS

    DPLUS   shift, and go to state 71
    DMINUS  shift, and go to state 72

    $default  reduce using rule 43 (Exp)


state 63

   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   44    | NOT Exp .
   46    | Exp . DPLUS
   48    | Exp . DMINUS

    DPLUS   shift, and go to state 71
    DMINUS  shift, and go to state 72

    $default  reduce using rule 44 (Exp)


state 64

   22 Stmt: IF LP . Exp RP Stmt
   23     | IF LP . Exp RP Stmt ELSE Stmt

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp  go to state 87


state 65

   24 Stmt: WHILE LP . Exp RP Stmt

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp  go to state 88


state 66

   21 Stmt: RETURN Exp . SEMI
   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   46    | Exp . DPLUS
   48    | Exp . DMINUS

    RELOP     shift, and go to state 70
    DPLUS     shift, and go to state 71
    DMINUS    shift, and go to state 72
    SEMI      shift, and go to state 89
    PLUS      shift, and go to state 74
    MINUS     shift, and go to state 75
    STAR      shift, and go to state 76
    DIV       shift, and go to state 77
    ASSIGNOP  shift, and go to state 78
    AND       shift, and go to state 79
    OR        shift, and go to state 80


state 67

   25 Stmt: FOR LP . Exp SEMI Exp SEMI Exp RP Stmt

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    DPLUS   shift, and go to state 40
    DMINUS  shift, and go to state 41
    LP      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44

    Exp  go to state 90


state 68

   16 CompSt: LC DefList StmList RC .
